src/test/fun-test/semantic/IncorrectReturnValue2.java.err
Semantic error: incompatible types: VOID required, got INT, line 2, pos 25
