src/test/fun-test/semantic/IncorrectReturnValue2.java
class Main {
    void foo() { return 5; }

    void main() {}
}